--- a/css/style.css
+++ b/css/style.css
@@ -97,3 +97,16 @@ a {
     width: 100%;
     height: 400px; 
 }
+
+#totalCasesDisplay {
+    position: absolute;
+    top: 120px; 
+    left: 190px; 
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1; 
+    font-size: 16px;
+    color: #333; 
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2); 
+}
